--- a/Pour.html
+++ b/Pour.html
@@ -12,7 +12,7 @@
             </p>
             <h2>Première approche</h2>
             <p>
-                La boucle « pour » permet de répéter plusieurs fois un bloc d'instructions. La boucle est introduite grâce au mot-clé <mark class="code">for</mark> et le bloc d'instructions à répété est identifié par une indentation. Exemple :
+                La boucle « pour » permet de répéter plusieurs fois un bloc d'instructions. La boucle est introduite grâce au mot-clé <mark class="code">for</mark> et le bloc d'instructions à répéter est identifié par une indentation. Exemple :
             </p>
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
@@ -29,7 +29,7 @@
                 <div class="algo">
                     <input type="button" class="copier" value="📑" title="copier">
                     <p class="code">
-                        valeur_suivante_collatz(a) : <br/>
+                        def valeur_suivante_collatz(a) : <br/>
                         &nbsp;&nbsp;&nbsp;&nbsp;if a%2 == 0 : <br/>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return a//2 <br/>
                         &nbsp;&nbsp;&nbsp;&nbsp;return 3*a + 1 <br/>
