--- a/Fonctions.html
+++ b/Fonctions.html
@@ -22,7 +22,7 @@
                 </p>
             </div>
             <div class="exercice">
-                Ecrire un fonction <mark class="code">carre</mark> qui retourne le carré d'une nombre donné en paramètres.
+                Ecrire un fonction <mark class="code">carre</mark> qui retourne le carré d'un nombre donné en paramètre.
             </div>
             <p>
                 Remarque : lorsque l'on déclare une fonction, les instructions ne sont pas exécutées. Elle le seront uniquement lors de l'appel de cette fonction. Cet appel se fait en réutilisant le nom donné à la fonction. Exemple :
@@ -146,7 +146,7 @@
                 On peut remarquer que cette fonction ne retourne aucune valeur.
             </p>
             <div class="exercice">
-                Ecrire un fonction <mark class="code">chiffres()</mark> qui affiche les chiffres ecrites en toutes lettres, un chiffre par ligne.
+                Ecrire un fonction <mark class="code">chiffres()</mark> qui affiche les chiffres de 1 à 9 ecrits en toutes lettres, un chiffre par ligne.
             </div>
             <h2>Fonctions retournant plusieurs valeurs</h2>
             <p>
