--- a/VariablesEntreesSorties.html
+++ b/VariablesEntreesSorties.html
@@ -216,13 +216,13 @@
                 <input type="button" class="copier" value="📑" title="copier">
                 <p class="code">
                     article = input("Que souhaites tu acheter ? ") <br/>
-                    prix_unitaire = <mark>int(</mark>input("Quel est le prix unitaire ? ")<mark>)</mark> <br/>
-                    quantite = <mark>float(</mark>input("Combien souhaites tu en acheter ? ")<mark>)</mark> <br/>
+                    prix_unitaire = <mark>float(</mark>input("Quel est le prix unitaire ? ")<mark>)</mark> <br/>
+                    quantite = <mark>int(</mark>input("Combien souhaites tu en acheter ? ")<mark>)</mark> <br/>
                     print(quantite, article, "à", prix_unitaire, "€ :", quantite*prix_unitaire, "€")
                 </p>
             </div>
             <div class="exercice">
-                Ecrire un programme qui demande une taille (en m) et une masse (en kg) puis affiche l'Indice de Masse Corporelle. L'IMC se calcule grâce à la formule <span class="frac"><span class="haut">masse</span><span class="bas">taille²</span></span>
+                Ecrire un programme qui demande une taille (en m) et une masse (en kg) puis affiche l'Indice de Masse Corporelle. L'IMC se calcule grâce à la formule <span class="frac"><span class="haut">masse</span><span class="bas">taille<sup>2</sup></span></span>
             </div>
             <p>
                 La fonction <mark class="code">input</mark> ne permet pas d'afficher des phrases dépendant de variables aussi simplement que la fonction <mark class="code">print</mark>. Si besoin, il faut utiliser la <mark>concaténation</mark> grâce au symbole <mark class="code">+</mark>. Exemple :
