--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <ol>
                 <li><a href="Recursivite.html">Récursivité</a></li>
                 <li><a href="POO.html">Programmation orienté objet</a></li>
+                <li><a href="DiviserRegner.html">Diviser pour régner</a></li>
             </ol>
         </div>
     </body>
