--- a/DiviserRegner.html
+++ b/DiviserRegner.html
@@ -278,7 +278,7 @@
             <div class="exercice">
                 <ol>
                     <li>
-                        Ecrire une fonction<br/> <mark class="code">temps_montage(poste_actuel, chemin_actuel="", temps_actuel=0, liste_resultat=[])</mark> qui retournera la liste des couples <mark class="code">(chemin, temps_de_montage)</mark> pour tous les chemins partant du <mark class="code">poste_actuel</mark> et allant jusqu'au poste final.
+                        Ecrire une fonction récursive<br/> <mark class="code">temps_montage(poste_actuel, chemin_actuel="", temps_actuel=0, liste_resultats=[])</mark> qui retournera la liste des couples <mark class="code">(chemin, temps_de_montage)</mark> pour tous les chemins partant du <mark class="code">poste_actuel</mark> et allant jusqu'au poste final.
                     </li>
                     <li>
                         Utiliser cette fonction pour trouver la chaîne la plus rapide.
