--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="Recursivite.html">Récursivité</a></li>
                 <li><a href="POO.html">Programmation orienté objet</a></li>
                 <li><a href="DiviserRegner.html">Diviser pour régner</a></li>
+                <li><a href="TypesAbstraits.html">Types abstraits</a></li>
             </ol>
         </div>
     </body>
