--- a/TypesAbstraits.html
+++ b/TypesAbstraits.html
@@ -106,7 +106,7 @@
                     <li>Pourquoi une pile semble tout indiquée pour stocker les url des pages précédemment visitée ?</li>
                     <li>Lorsque l'on utilise le bouton "précédent", comment stocker les url que l'on devra retrouver en utilisant "suivant" ?</li>
                     <li>Ecrire un objet <mark class="code">historique</mark> contenant les méthodes suivantes :
-                        <mark class="code">visiter_site(url)</mark>, <mark class="code">url_actuelle()</mark>, <mark class="code">page_precedente(url)</mark>, <mark class="code">page_suivante(url)</mark><br/>
+                        <mark class="code">visiter_site(url)</mark>, <mark class="code">page_actuelle()</mark>, <mark class="code">page_precedente()</mark>, <mark class="code">page_suivante()</mark><br/>
                         Vous choisirez vous même les attributs que vous utiliserez.
                     </li>
                 </ol>
